fix text width styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,6 +102,7 @@ li {
 pre {
   padding: 1rem;
   border-radius: 0.5rem;
+  max-width: 100%;
 }
 
 code {
@@ -109,6 +110,7 @@ code {
   background-color: var(--color-grey);
   color: var(--color-text-black);
   font-size: 0.875rem;
+  max-width: 100% !important;
 }
 
 input {
@@ -167,6 +169,7 @@ button:hover {
 
 .rich-text img {
   width: 100%;
+  max-width: 100%;
   margin-bottom: 2rem;
 }
 
@@ -351,6 +354,7 @@ button:hover {
 
 .blog-content {
   max-width: 800px;
+  width: 100%;
 }
 
 .blog-title {
